# investment_world

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
investment_world/: asgi.py  settings.py  urls.py  views.py  wsgi.py
